--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
     <script>
         
 
+
+        // some drafts for a random appearance
         let pageXLocation = Math.floor(Math.random() * 320);
         let pageYLocation = Math.floor(Math.random() * 320);
 
