--- a/main.html
+++ b/main.html
@@ -12,6 +12,15 @@
 
     <script>
         
+        let dog = {
+            'name' : 'Go',
+            'age' : 6,
+            'isAwesome' : true,
+            'legs' : 4,
+            'bark' : function () {
+                console.log('Gaw-gaw! My name is ' + this.name)
+            }
+        }
 
     </script>
 </body>
