--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <title>Race</title>
 </head>
 <body>
+    
 <script src="https://code.jquery.com/jquery-2.1.0.js"></script>
 
     <script>
-        
 
+        function Car (x, y) {
+            this.x = x;
+            this.y = y;
+        };
 
     </script>
 </body>
