--- a/index.html
+++ b/index.html
@@ -10,6 +10,28 @@
 
     <script>
 
+        let tesla = new Car(20, 20);
+        let nissan = new Car (100, 200);
+        drawCar(tesla);
+        drawCar(nissan);
+
+
+        function drawCar (car) {
+            
+            let carHtml = '<img src="../catch/img/car.png">';
+
+            let carElement = $(carHtml);
+
+            carElement.css({
+                position : 'absolute',
+                left: car.x,
+                top : car.y
+            })
+
+            $('body').append(carElement);
+        };
+
+
         function Car (x, y) {
             this.x = x;
             this.y = y;
