--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         function Car (x, y) {
             this.x = x;
             this.y = y;
+            this.draw();
         };
 
 
@@ -84,8 +85,8 @@
 
         let tesla = new Car(20, 20);
         let nissan = new Car (100, 200);
-        tesla.draw();
-        nissan.draw();
+        //tesla.draw();
+        //nissan.draw();
 
         /* setInterval(() => {
             nissan.moveRight();
