--- a/index.html
+++ b/index.html
@@ -44,111 +44,13 @@
 
 </head>
 <body>
+
+    <script src="https://code.jquery.com/jquery-2.1.0.js"></script>
+    <script src="src/main.js"></script>
+
             
     <button class="button button1" onclick="startRace();">Start race!</button>
-    <button class="button button2">Stop race!</button>
+    <button class="button button2" onclick="stopRace();">Stop race!</button>
 
-
-<script src="https://code.jquery.com/jquery-2.1.0.js"></script>
-
-    <script>
-
-        // returns a random number between min and max (both included)
-        function getRndInteger(min, max) {
-        return Math.floor(Math.random() * (max - min + 1) ) + min;
-        };
-
-
-        // creating constructor
-        function Car (x, y) {
-            this.x = x;
-            this.y = y;
-            this.draw();
-        };
-
-
-        // creating a draw method for our objects
-        Car.prototype.draw = function () {
-
-            let carHtml = '<img src="../race/img/car.png">';
-
-            this.carElement = $(carHtml);
-
-            this.carElement.css({
-                position : 'absolute',
-                left: this.x,
-                top : this.y
-            })
-
-            $('body').append(this.carElement);
-        };
-
-
-        // moving object right
-        Car.prototype.moveRight = function () {
-
-            this.x += getRndInteger(0 ,5);
-            this.carElement.css({
-                left : this.x,
-                top : this.y
-            });
-        };
-
-
-        // moving object left
-        Car.prototype.moveLeft = function () {
-
-            this.x -= getRndInteger(0 ,5);
-
-            this.carElement.css({
-                left : this.x,
-                top : this.y
-            });
-        };
-
-
-        // moving object up
-        Car.prototype.moveUp = function () {
-
-            this.y -= getRndInteger(0 ,5);
-
-            this.carElement.css({
-                left : this.x,
-                top : this.y
-            });
-        };
-
-
-        // moving object down
-        Car.prototype.moveDown = function () {
-
-            this.y += getRndInteger(0 ,5);
-
-            this.carElement.css({
-                left : this.x,
-                top : this.y
-            });
-        };
-
-
-        let firstCar = new Car(20, 100);
-        let secondCar = new Car (20, 200);
-
-        function startRace () {
-
-            setInterval(() => {
-            firstCar.moveRight();
-        }, 30);
-
-        setInterval(() => {
-            secondCar.moveRight();
-        }, 30);
-
-        };
-        
-
-
-
-    </script>
 </body>
 </html>
