--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 </head>
 <body>
 
+    <h1>Choose the car that will come first and start the race!</h1>
+
     <script src="https://code.jquery.com/jquery-2.1.0.js"></script>
     <script src="src/main.js"></script>
 
